@@ -1,0 +1,5 @@
+	.section .note.stapsdt,"?","note"
+	.dc.a _.stapsdt.base
+	.section .stapsdt.base,"a","progbits"
+_.stapsdt.base: .space 1
+	.size _.stapsdt.base,1
