@@ -1,3 +1,9 @@
+2011-06-08  H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR ld/12851
+	* elflink.c (elf_gc_sweep): Don't check SHT_NOTE sections here.
+	(bfd_elf_gc_sections): Also check SHT_NOTE sections.
+
 2011-06-08  Tristan Gingold  <gingold@adacore.com>
 
 	* makefile.vms (OBJS): Add elfxx-ia64.obj
